syntax = "proto3";

import "shared.proto";
import "features.proto";

package gateway;

message ConnectRequest {
    string version = 2;
    optional shared.RoomJoin join = 3;
    features.Config features = 4;
    shared.Tracks tracks = 5;
    string sdp = 6;
}

message ConnectResponse {
    string conn_id = 1;
    string sdp = 2;
}

message RemoteIceRequest {
    string conn_id = 1;
    string candidate = 2;
}

message RemoteIceResponse {

}
